Bug 1038799 - Properly wrap Xfixes.h header. r=glandium