media/webrtc/trunk/webrtc/modules/desktop_capture/x11/desktop_device_info_x11.cc
@@ -3,6 +3,7 @@
  * You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 #include "webrtc/modules/desktop_capture/x11/desktop_device_info_x11.h"
+#include "webrtc/modules/desktop_capture/window_capturer.h"
 
 namespace webrtc{
 
